// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:75 at 60bps gas 1`] = `9900`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:75 at 60bps snapshot 1`] = `
Object {
  "amountIn": "11305074013661421002",
  "amountInLessFee": "11237243569579452475",
  "amountOut": "183503419072273967",
  "lpFee": 60,
  "priceAfterSwap": "389422264390112072139787224691507200",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "389422264390112072146146463639740389",
  "priceBeforeSwap": "259614842926741381426524816461004800",
  "priceTarget": "389422264390112072139787224691507200",
  "reserve0": "1000000000000000000",
  "reserve1": "50000000000000000000",
  "zeroForOne": false,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:100 at 200bps gas 1`] = `9910`;

exports[`PriceMath #getInputToRatio invariants 1:50 to 1:100 at 200bps snapshot 1`] = `
Object {
  "amountIn": "21133345019035461735",
  "amountInLessFee": "20710678118654752500",
  "amountOut": "292893218813452475",
  "lpFee": 200,
  "priceAfterSwap": "519229685853482762853049632922009600",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "519229685853482762860392649559216768",
  "priceBeforeSwap": "259614842926741381426524816461004800",
  "priceTarget": "519229685853482762853049632922009600",
  "reserve0": "1000000000000000000",
  "reserve1": "50000000000000000000",
  "zeroForOne": false,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 30bps gas 1`] = `10002`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 30bps snapshot 1`] = `
Object {
  "amountIn": "15623761861187044017644422254424",
  "amountInLessFee": "15576890575603482885591488987660",
  "amountOut": "-778844528780124144279574449383000",
  "lpFee": 30,
  "priceAfterSwap": "259614842926741381426524816461004800",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "259614842926741381426524816460971800",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps gas 1`] = `10002`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps snapshot 1`] = `
Object {
  "amountIn": "31341832144072400172216275629096",
  "amountInLessFee": "31153781151207965771182977975321",
  "amountOut": "-1557689057560348288559148898766050",
  "lpFee": 60,
  "priceAfterSwap": "259614842926741381426524816461004800",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "259614842926741381426524816460988300",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps with small reserves gas 1`] = `4334`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps with small reserves snapshot 1`] = `
Object {
  "amountIn": "31341832144073406208433579451027",
  "amountInLessFee": "31153781151208965771182977974320",
  "amountOut": "-1557689057560448288559148898666000",
  "lpFee": 60,
  "priceAfterSwap": "259614842926741381426524816461004800",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "259614842926741381426524816460988300",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "259614842926741381426524816461004800",
  "reserve0": "1000",
  "reserve1": "100000",
  "zeroForOne": true,
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:75 at 45bps gas 1`] = `10002`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:75 at 45bps snapshot 1`] = `
Object {
  "amountIn": "23470955161633073157596417359609",
  "amountInLessFee": "23365335863405724328387233481490",
  "amountOut": "-1752400189755404324629042511111750",
  "lpFee": 45,
  "priceAfterSwap": "389422264390112072139787224691507200",
  "priceAfterSwapWith1MoreWeiEffectiveInput": "389422264390112072139787224691474088",
  "priceBeforeSwap": "519229685853482762853049632922009600",
  "priceTarget": "389422264390112072139787224691507200",
  "reserve0": "1000000000000000000",
  "reserve1": "100000000000000000000",
  "zeroForOne": true,
}
`;
